test/types/seq/bradc/length.modify.good
length.modify.chpl:8: error: illegal assignment to sequence's length
